# up-vsomeip-helloworld

./: CMakeLists.txt  Dockerfile  README.md  docker-build.sh
config/: hello_client-proxy.json  hello_client.json  hello_service.json
patches/3.1.20.3/: 000-cmake-reduce-gcc-warnings.patch  001-vsomeip-logger-fixes.patch  002-vsomeip-default-major-change.patch
patches/3.4.10/: .001-vsomeip-default-major-change.patch  .003-extra-debug.patch  000-fix-suspended-routing.patch  004-enable_sub_state_nack_handlers.patch
src/: CMakeLists.txt  hello_client.cc  hello_proto.h  hello_service.cc  hello_utils.cc  hello_utils.h  timer.cc  timer.h
